Git Tests/force-app/main/default/default/objects/ProdutoReserva__c/ProdutoReserva__c.object-meta.xml
<CustomObject>
    <label>Produto da reserva</label>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>Nome de Produto da reserva</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos da reserva</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>