Git Tests/force-app/main/default/default/objects/ProdutoReserva__c/fields/Armazem__c.field-meta.xml
<CustomField>
    <fullName>Armazem__c</fullName>
    <externalId>true</externalId>
    <label>Armazém</label>
    <length>255</length>
    <type>Text</type>
</CustomField>