Git Tests/force-app/main/default/default/objects/ProdutoReserva__c/fields/DataUltimaMovimentacao__c.field-meta.xml
<CustomField>
    <fullName>DataUltimaMovimentacao__c</fullName>
    <label>Data última movimentação</label>
    <type>DateTime</type>
</CustomField>