Git Tests/force-app/main/default/default/objects/ProdutoReserva__c/fields/QuantidadeAtiva__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeAtiva__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade solicitada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>