Git Tests/force-app/main/default/default/objects/ProdutoReserva__c/fields/QuantidadeReservada__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeReservada__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade reservada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>