Git Tests/force-app/main/default/default/objects/ProdutoReserva__c/fields/QuantidadeTransferida__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeTransferida__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade transferida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>