Git Tests/force-app/main/default/default/objects/ProdutoReserva__c/fields/ReservaRecebedora__c.field-meta.xml
<CustomField>
    <fullName>ReservaRecebedora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reserva recebedora</label>
    <referenceTo>Reserva__c</referenceTo>
    <relationshipLabel>Produtos da reserva (Reserva recebedora)</relationshipLabel>
    <relationshipName>ProdutoReserva</relationshipName>
    <type>Lookup</type>
</CustomField>