Git Tests/force-app/main/default/default/objects/ProdutoReserva__c/fields/StatusReserva__c.field-meta.xml
<CustomField>
    <fullName>StatusReserva__c</fullName>
    <label>Status da reserva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando aprovação</fullName>
            </value>
            <value>
                <fullName>Ativa</fullName>
            </value>
            <value>
                <fullName>Rejeitada</fullName>
            </value>
            <value>
                <fullName>Aguardando integração</fullName>
            </value>
            <value>
                <fullName>Erro de integração</fullName>
            </value>
            <value>
                <fullName>Aguardando exclusão</fullName>
            </value>
            <value>
                <fullName>Expirada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>