Git Tests/force-app/main/default/default/objects/ProdutoReserva__c/fields/UltimaAprovacao__c.field-meta.xml
<CustomField>
    <fullName>UltimaAprovacao__c</fullName>
    <label>Última aprovação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>