Git Tests/force-app/main/default/default/objects/ProdutoReserva__c/fields/ValorTotal__c.field-meta.xml
<CustomField>
    <fullName>ValorTotal__c</fullName>
    <formula>QuantidadeReservada__c  *  Preco__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>